--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,md,json,html}\""
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@radix-ui/themes": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
