update deploy after merge workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,9 @@
 name: Build and Deploy to GitHub Pages
 on:
-  push:
-    branches:
-      - main # Set the branch to your default branch
+  # set main pull request merged to trigger this deployment
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 jobs:
   build-and-deploy:
