--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -1,6 +1,6 @@
 name: Code Quality Check
 
-on: [pull_request] #trigger on pull request
+on: [pull_request]
 
 jobs:
   lint-and-format:
@@ -18,8 +18,18 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run ESLint
+      - name: Run ESLint # if failed will continue to run the other steps, but will record this failed step
+        continue-on-error: true
+        id: eslint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
       - name: Run Prettier
+        continue-on-error: true
+        id: prettier
         run: npx prettier --check .
+
+      - name: Check If Failed Before
+        run: |
+          if [ ${{ steps.eslint.outcome }} == 'failure' ] || [ ${{ steps.prettier.outcome }} == 'failure' ]; then
+            exit 1
+          fi
