--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "useTabs": false,
   "jsxSingleQuote": false,
   "jsxBracketSameLine": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
