--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,5 @@
   "jsxSingleQuote": false,
   "jsxBracketSameLine": false,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "auto"
 }
