--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,8 @@
 name: Build and Deploy to GitHub Pages
 on:
   # set main pull request merged to trigger this deployment
+  push:
+    branches: [main]
   pull_request:
     types: [closed]
     branches: [main]
