--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -1,6 +1,9 @@
 name: Code Quality Check
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main # pull request to main branch
 
 jobs:
   lint-and-format:
