--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite preview --port 5837",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,md,json,html}\""
   },
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
