--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "create-vite": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
