--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,13 +2,10 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-  pull_request:
-    types: [closed]
-    branches: [main]
 
 jobs:
   build-and-deploy:
-    if: ${{ github.event.pull_request.merged == true || startsWith(github.event.head_commit.message, '#DEPLOY') }}
+    if: ${{ startsWith(github.event.head_commit.message, '#DEPLOY') }}
     runs-on: ubuntu-latest
 
     steps:
